added publisher name in package.json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "categories": [
         "Snippets"
     ],
+    "publisher": "theacode",
     "contributes": {
         "snippets": [
             {
