added repository in package.json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "categories": [
         "Snippets"
     ],
+    "repository": {
+        "url": "https://github.com/theacode/snippets-for-sv",
     "publisher": "theacode",
     "contributes": {
         "snippets": [
